# python-template-ml

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  run_tests.sh
{{ cookiecutter.repo_name }}/.github/workflows/: test.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/: config.py
